--- a/index.html
+++ b/index.html
@@ -10,5 +10,36 @@
                 <p>~クロの紹介~</p>
             </div>
         </header>
+        <main>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </main>
+        <section>
+            <h2>クロの日常の紹介</h2>
+            <div class="grid-container">
+                <div class="grid-items">
+                    <p><span>朝</span>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。</p>
+                </div>
+                <div class="grid-items">
+                    <p><span>散歩</span>は毎日の日課。雨の日は行けないのでその時は残念がっています。</p>
+                </div>
+                <div class="grid-items">
+                    <p><span>食事</span>はおやつとしてミニトマト、ブロッコリーでダイエット中。貰うまでは母の足元にピッタリひっつきます。</p>
+                </div>
+                <div class="grid-items">
+                    <p><span>性格</span>としては人が好き。名前を呼ぶと尻尾を振るくらい。しかし、知らない人には良く吠えます...</p>
+                </div>
+                <div class="grid-items">
+                    <p><span>家の中</span>では玄関のチャイムが鳴ると吠えます。しかし、それ以外の時は専らおとなしいので安心です。</p>
+                </div>
+                <div class="grid-items">
+                    <p><span>睡眠</span>はいびきをかいてお腹を出して寝ることがあります。飼い主に似ると言われますすが、誰に似たのでしょうか。</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
