--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p>ページの先頭へ</p>
+        </footer>
     </body>
 </html>
