--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <div class="flex-container">
-                <h1>クロサイト</h1>
+                <h1 id="page-top">クロサイト</h1>
                 <p>~クロの紹介~</p>
             </div>
         </header>
@@ -23,27 +23,27 @@
             <h2>クロの日常の紹介</h2>
             <div class="grid-container">
                 <div class="grid-items">
-                    <p><span>朝</span>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。</p>
+                    <p><strong>朝</strong>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。</p>
                 </div>
                 <div class="grid-items">
-                    <p><span>散歩</span>は毎日の日課。雨の日は行けないのでその時は残念がっています。</p>
+                    <p><strong>散歩</strong>は毎日の日課。雨の日は行けないのでその時は残念がっています。</p>
                 </div>
                 <div class="grid-items">
-                    <p><span>食事</span>はおやつとしてミニトマト、ブロッコリーでダイエット中。貰うまでは母の足元にピッタリひっつきます。</p>
+                    <p><strong>食事</strong>はおやつとしてミニトマト、ブロッコリーでダイエット中。貰うまでは母の足元にピッタリひっつきます。</p>
                 </div>
                 <div class="grid-items">
-                    <p><span>性格</span>としては人が好き。名前を呼ぶと尻尾を振るくらい。しかし、知らない人には良く吠えます...</p>
+                    <p><strong>性格</strong>としては人が好き。名前を呼ぶと尻尾を振るくらい。しかし、知らない人には良く吠えます...</p>
                 </div>
                 <div class="grid-items">
-                    <p><span>家の中</span>では玄関のチャイムが鳴ると吠えます。しかし、それ以外の時は専らおとなしいので安心です。</p>
+                    <p><strong>家の中</strong>では玄関のチャイムが鳴ると吠えます。しかし、それ以外の時は専らおとなしいので安心です。</p>
                 </div>
                 <div class="grid-items">
-                    <p><span>睡眠</span>はいびきをかいてお腹を出して寝ることがあります。飼い主に似ると言われますすが、誰に似たのでしょうか。</p>
+                    <p><strong>睡眠</strong>はいびきをかいてお腹を出して寝ることがあります。飼い主に似ると言われますすが、誰に似たのでしょうか。</p>
                 </div>
             </div>
         </section>
         <footer>
-            <p>ページの先頭へ</p>
+            <p><a href="">ページの先頭へ</a></p>
         </footer>
     </body>
 </html>
