--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </section>
         <footer>
-            <p><a href="">ページの先頭へ</a></p>
+            <p><a href="#page-top">ページの先頭へ</a></p>
         </footer>
     </body>
 </html>
