--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     </head>
     <body>
         <header>
@@ -12,7 +13,7 @@
             </div>
         </header>
         <main>
-            <ul>
+            <ul class="slider">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -45,5 +46,8 @@
         <footer>
             <p><a href="#page-top">ページの先頭へ</a></p>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
