--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         </header>
         <main>
             <ul class="slider">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><img src="https://cdn.pixabay.com/photo/2022/03/30/11/12/dog-7101015__340.jpg"></li>
+                <li><img src="https://cdn.pixabay.com/photo/2022/04/02/16/04/fox-7107267__340.jpg"></li>
+                <li><img src="https://cdn.pixabay.com/photo/2022/03/18/19/09/blue-throat-7077261__340.jpg"></li>
+                <li><img src="https://cdn.pixabay.com/photo/2022/01/26/05/56/stairs-6968125__340.jpg"></li>
+                <li><img src="https://cdn.pixabay.com/photo/2022/03/27/18/00/feather-7095765__340.jpg"></li>
             </ul>
         </main>
         <section>
