--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </header>
         <main>
             <ul class="slider">
-                <li><img src="https://cdn.pixabay.com/photo/2022/03/30/11/12/dog-7101015__340.jpg"></li>
-                <li><img src="https://cdn.pixabay.com/photo/2022/04/02/16/04/fox-7107267__340.jpg"></li>
-                <li><img src="https://cdn.pixabay.com/photo/2022/03/18/19/09/blue-throat-7077261__340.jpg"></li>
-                <li><img src="https://cdn.pixabay.com/photo/2022/01/26/05/56/stairs-6968125__340.jpg"></li>
-                <li><img src="https://cdn.pixabay.com/photo/2022/03/27/18/00/feather-7095765__340.jpg"></li>
+                <li><img src="./IMG_0226.JPG"></li>
+                <li><img src="./IMG_0230.JPG"></li>
+                <li><img src="./IMG_0423.JPG"></li>
+                <li><img src="./IMG_0266.jpeg"></li>
+                <li><img src="./IMG_0050.jpeg"></li>
             </ul>
         </main>
         <section>
