--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                     <p><strong>朝</strong>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>散歩</strong>は毎日の日課。決まったコースを散歩します。雨の日は行けないのでその時は残念がっています。</p>
+                    <p><strong>散歩</strong>は毎日の日課。決まったコースを散歩します。勢い余って散歩中はぐいぐい引っ張って歩きます。雨の日は行けないのでその時は残念がっています。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>食事</strong>はよく食べます。おやつとしてミニトマト、ブロッコリーでダイエット中。貰うまでは母の足元にピッタリひっつきます。</p>
+                    <p><strong>食事</strong>はよく食べます。おやつとしてミニトマト、ブロッコリーでダイエット中。肝心のドッグフードはおやつに負けて二の次に食べています。貰うまでは母の足元にピッタリひっつきます。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>性格</strong>としては人が好き。名前を呼ぶと尻尾を振るくらい。しかし、知らない人には良く吠えます...</p>
+                    <p><strong>性格</strong>としては人が好き。名前を呼ぶと尻尾を振るくらい。たまに乗っかかってきて顔をなめに来ます。しかし、知らない人には良く吠えます。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>家の中</strong>では玄関のチャイムが鳴ると吠えます。しかし、それ以外の時は専らおとなしいので安心です。</p>
+                    <p><strong>家の中</strong>では玄関のチャイムが鳴ると吠えます。落ち着くまでしばらくかかります。しかし、それ以外の時は専らおとなしいので安心です。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>睡眠</strong>はいびきをかいてお腹を出して寝ることがあります。飼い主に似ると言われますが、誰に似たのでしょうか。</p>
+                    <p><strong>睡眠</strong>はいびきをかいてお腹を出して寝ることがあります。寝る場所は椅子の上が多く数か所を気分によって変えているみたいです。夜は自ら小屋の中に入って寝ることがあります。飼い主に似ると言われますが、誰に似たのでしょうか。</p>
                 </div>
             </div>
         </section>
