--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         </header>
         <main>
             <ul class="slider">
-                <li><img src="./IMG_0226.JPG"></li>
-                <li><img src="./IMG_0230.JPG"></li>
-                <li><img src="./IMG_0423.JPG"></li>
-                <li><img src="./IMG_0266.jpeg"></li>
-                <li><img src="./IMG_0050.jpeg"></li>
+                <li><img src="./IMG_0226.JPG" alt="チワワの写真"></li>
+                <li><img src="./IMG_0230.JPG" alt="チワワの写真"></li>
+                <li><img src="./IMG_0423.JPG" alt="チワワの写真"></li>
+                <li><img src="./IMG_0266.jpeg" alt="チワワの写真"></li>
+                <li><img src="./IMG_0050.jpeg" alt="チワワの写真"></li>
             </ul>
         </main>
         <section>
             <h2>クロの日常の紹介</h2>
             <div class="grid-container">
                 <div class="grid-items">
-                    <p><strong>朝</strong>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。</p>
+                    <p><strong>朝</strong>はAM 5:00に起きます。家の中では早起きの方です。30分後には楽しみが待っています。起きた後も寝ていることが多く、静かに過ごしています。</p>
                 </div>
                 <div class="grid-items">
                     <p><strong>散歩</strong>は毎日の日課。決まったコースを散歩します。勢い余って散歩中はぐいぐい引っ張って歩きます。雨の日は行けないのでその時は残念がっています。</p>
@@ -34,13 +34,13 @@
                     <p><strong>食事</strong>はよく食べます。おやつとしてミニトマト、ブロッコリーでダイエット中。肝心のドッグフードはおやつに負けて二の次に食べています。貰うまでは母の足元にピッタリひっつきます。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>性格</strong>としては人が好き。名前を呼ぶと尻尾を振るくらい。たまに乗っかかってきて顔をなめに来ます。しかし、知らない人には良く吠えます。</p>
+                    <p><strong>性格</strong>としては人が好き。たまに乗っかかってきて顔をなめに来ます。名前を呼ぶと尻尾を振ることがあります。しかし、知らない人には良く吠えます。なので人を家に上げるときは大変です。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>家の中</strong>では玄関のチャイムが鳴ると吠えます。落ち着くまでしばらくかかります。しかし、それ以外の時は専らおとなしいので安心です。</p>
+                    <p><strong>家の中</strong>では玄関のチャイムが鳴ると吠えます。落ち着くまでしばらくかかります。しかし、それ以外の時は専らおとなしいので安心です。庭に出ることがあり、出してもらう時はすごく喜びます。出た後は気が済んだら自ら家の中に帰ってきます。</p>
                 </div>
                 <div class="grid-items">
-                    <p><strong>睡眠</strong>はいびきをかいてお腹を出して寝ることがあります。寝る場所は椅子の上が多く数か所を気分によって変えているみたいです。夜は自ら小屋の中に入って寝ることがあります。飼い主に似ると言われますが、誰に似たのでしょうか。</p>
+                    <p><strong>睡眠</strong>は良く寝ます。寝る場所は椅子の上が多く数か所を気分によって変えているみたいです。夜は自ら小屋に入って寝ることがあります。たまに、いびきをかいてお腹を出して寝ることがあります。飼い主に似ると言われますが誰に似たのでしょうか。</p>
                 </div>
             </div>
         </section>
