--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </header>
         <main>
             <ul class="slider">
-                <li><img src="./IMG_0226.JPG" alt="チワワの写真"></li>
-                <li><img src="./IMG_0230.JPG" alt="チワワの写真"></li>
-                <li><img src="./IMG_0423.JPG" alt="チワワの写真"></li>
-                <li><img src="./IMG_0266.jpeg" alt="チワワの写真"></li>
-                <li><img src="./IMG_0050.jpeg" alt="チワワの写真"></li>
+                <li><img src="./img/IMG_0226.JPG" alt="チワワの写真"></li>
+                <li><img src="./img/IMG_0230.JPG" alt="チワワの写真"></li>
+                <li><img src="./img/IMG_0423.JPG" alt="チワワの写真"></li>
+                <li><img src="./img/IMG_0266.jpeg" alt="チワワの写真"></li>
+                <li><img src="./img/IMG_0050.jpeg" alt="チワワの写真"></li>
             </ul>
         </main>
         <section>
